--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build ",
+    "build": "vite build && npm run build:css",
     "lint": "eslint .",
     "preview": "vite preview",
     "build:css": "tailwindcss build src/styles.css -o dist/styles.css"
